# thermal2color

./: CMakeLists.txt  README.md  package.xml  setup.py
script/: blackbody2cpt.py  cmaptools.py  cmapy.py  loadcpt.py  thermal2color.py
script/palettes/: GPS-Fire-Blueish.cpt  GPS-Fire-Incandescent.cpt  GPS-Fire-Life-Span.cpt  blackbody.cpt  blackbody10deg.cpt  blackbody2deg.cpt  grayred-bk.cpt  grayred.cpt  grayred2.cpt  heat.cpt  ironbow.cpt  magma.cpt  sky-33.cpt  viridis.cpt
